# propresenter-train

./: .The Pledge of Allegiance.json.swp  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
output/: Dont Let Me Be Misunderstood.json  Drive-2.json  Drive.json  Mary Had A Little Lamb Metal.json  Mary Had A Little Lamb.json  The Pledge of Allegiance.json  Your Way Is Better.json  your_way_is_better.json
presentation/: README.md  The Pledge of Allegiance.pro
src/propresenter_train/: __init__.py  main.py  models.py  playback.py  playback_main.py  trainer.py
tests/: test_playback.py  test_trainer.py
